# football_pipeline

./: .gitignore  LICENSE  Makefile  README.md  ingest_statsbomb.py  main.py  pyproject.toml  requirements.in  requirements.txt  setup.py
_01_bronze/: bronze_ingest.py  open_data_ingest.py
_01_bronze/j1_league/: ingest.py
_01_bronze/open_data/: ingest.py
_02_silver/: _360_events.py  competitions_data.py  event_data.py  events_360.py  events_data.py  lineups_data.py  matches_data.py
_02_silver/open_data/: competitions.py  competitions_data.py  events_360.py  events_data.py  lineups_data.py  matches_data.py
_03_gold/: gold_aggregate.py  xg_model.py
bronze/: bronze_ingest.py
dagster_project/: repositories.py
dagster_project/assets/: bronze.py  gold.py  silver.py
data/bronze/: AAPL.parquet  bronze_ingest.py
data/gold/: AAPL_momentum.parquet
data/silver/: AAPL.parquet  silver_transform.py
gold/: gold_aggregate.py
notebooks/: 02_silver_event_data.ipynb  02_silver_lineups_data.ipynb  02_transform_silver_layer.ipynb  README.md  duck_db.ipynb  test.ipynb
notebooks/open_data/: eda.ipynb  eda_competitions.ipynb  eda_events.ipynb  eda_matches.ipynb  spadl.ipynb
notebooks/soccerdata/: soccerdata.ipynb
schemas/: 360_schema.py  competitions_schema.py  events_schema.py  lineups_schema.py  matches_schema.py  schema_360.py
schemas/j1_league/: events_schema.py  mappings_schema.py  (+1 more)
silver/: competitions_data.py  event_data.py  silver_transform.py
src/: __init__.py
utils/: config.py  constants.py  dataframe.py  io.py  logging.py  schema.py
(+28 files in other folders)
